basic css in now too

--- a/frontend/html/main_menu.html
+++ b/frontend/html/main_menu.html
@@ -3,8 +3,24 @@
 <html>
 	<head>
 		<title>Report Generator | Main</title>
+		<link rel="stylesheet" href="style/style.css" type="text/css" media="all" />
 	</head>
 	<body>
-
+		<div id="wrap">
+			<div id="header">
+				<h1>Report Generator</h1>
+			</div>
+			<div id="main_content">
+				<div id="main_content_lhs">
+					<p>Reports</p>
+				</div>
+				<div id="main_content_center">
+					<p>bleh</p>
+				</div>
+				<div id="main_content_rhs">
+					<p>more filler!</p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
