mockup done for the time being, started on the html/css

--- a/frontend/html/main_menu.html
+++ b/frontend/html/main_menu.html
@@ -12,15 +12,148 @@
 			</div>
 			<div id="main_content">
 				<div id="main_content_lhs">
-					<p>Reports</p>
+					<ul id="nav">
+						<li>	
+							<p>New Report</p>
+							<img src="style/images/newreport.png"></img>
+						</li>
+						<li>
+							<p>Reports</p>
+							<img src="style/images/reports.png"></img>
+						</li>
+						<li>
+							<p>Clients</p>
+							<img src="style/images/clients.png"></img>
+						</li>
+						<li>
+							<p>Email</p>
+							<img src="style/images/email.png"></img>
+						</li>
+						<li>
+							<p>Settings</p>
+							<img src="style/images/settings.png"></img>
+						</li>
+					</ul>
 				</div>
-				<div id="main_content_center">
-					<p>bleh</p>
+				<div id="main_content_mid">
+					<ul id="report_list">
+						<li>
+							<p>39 Iveston Road,</p>
+							<p>Lynwood</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>45 Pinetree Gully Road,</p>
+							<p>Willetton</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>12 High Road,</p>
+							<p>Riverton</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>92 Harrogate Street,</p>
+							<p>West Lederville</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>198 Lake Street,</p>
+							<p>Northbridge</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>1306 Albany Highway,</p>
+							<p>Cannington</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>7 Watersby Crescent</p>
+							<p>Shelley</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>16 Howard Parade,</p>
+							<p>Salters Point</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>17 Macrae Road,</p>
+							<p>Applecross</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+						<li>
+							<p>41 Drury Street,</p>
+							<p>Willagee</p>
+							<div class="report_list_controls">
+								<img src="style/images/download.png"></img>
+								<img src="style/images/edit.png"></img>
+								<img src="style/images/delete.png"></img>
+							</div>
+						</li>
+					</ul>
 				</div>
 				<div id="main_content_rhs">
-					<p>more filler!</p>
+					<h2>39 Iveston Road<br></br>Lynwood</h2>
+					<hr></hr>
+					<img src="report-cover.jpg"></img>
+					<hr></hr>
+					<p>Created On: 31<sup>st</sup> May 2011 at 3:19pm</p>
+					<p>Last Edited: 2<sup>nd</sup> June 2011 at 11:57am</p>
+					<hr></hr>
+					<h3>Contents</h3>
+					<ul>
+						<li>Introduction</li>
+						<li>Property Information &amp; Instructions</li>
+						<li>Rising / Penetrating Dampness Inspection</li>
+						<li>Condensation Report</li>
+						<li>Sketch Plan</li>
+						<li>Timber Survey</li>
+						<li>Summary &amp; Recomendations</li>
+						<li>Your Quote</li>
+						<li>Client Health &amp; Safety Data Sheet</li>
+						<li>Terms &amp; Conditions</li>
+					</ul>
 				</div>
 			</div>
+			<div id="footer">
+				<p>Designed &amp; Developed by <a href="http://jacobhaslehurst.com">Jacob Haslehurst</a> &amp; <a href="http://charliesomerville.com">Charlie Somerville</a>. &copy; 2011
 		</div>
 	</body>
 </html>
