styling pretty much done, still needs some bug fixes, ready for turb to come in and fix the columns

--- a/frontend/html/main_menu.html
+++ b/frontend/html/main_menu.html
@@ -13,118 +13,148 @@
 			<div id="main_content">
 				<div id="main_content_lhs">
 					<ul id="nav">
-						<li>	
-							<p>New Report</p>
-							<img src="style/images/newreport.png"></img>
-						</li>
-						<li>
-							<p>Reports</p>
-							<img src="style/images/reports.png"></img>
-						</li>
-						<li>
-							<p>Clients</p>
-							<img src="style/images/clients.png"></img>
-						</li>
-						<li>
-							<p>Email</p>
-							<img src="style/images/email.png"></img>
-						</li>
-						<li>
-							<p>Settings</p>
-							<img src="style/images/settings.png"></img>
-						</li>
+						<a href="#">
+							<li>	
+								<p>New Report</p>
+								<img src="style/images/newreport.png"></img>
+							</li>
+						</a>
+						<a href="#">
+							<li>
+								<p>Reports</p>
+								<img src="style/images/reports.png"></img>
+							</li>
+						</a>
+						<a href="#">
+							<li>
+								<p>Clients</p>
+								<img src="style/images/clients.png"></img>
+							</li>
+						</a>
+						<a href="#">
+							<li>
+								<p>Email</p>
+								<img src="style/images/email.png"></img>
+							</li>
+						</a>
+						<a href="#">
+							<li>
+								<p>Settings</p>
+								<img src="style/images/settings.png"></img>
+							</li>
+						</a>
 					</ul>
 				</div>
 				<div id="main_content_mid">
 					<ul id="report_list">
 						<li>
-							<p>39 Iveston Road,</p>
-							<p>Lynwood</p>
+							<a href="#">
+								<p class="street">39 Iveston Road,</p>
+								<p class="suburb">Lynwood</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>45 Pinetree Gully Road,</p>
-							<p>Willetton</p>
+							<a href="#">
+								<p class="street">45 Pinetree Gully Road,</p>
+								<p class="suburb">Willetton</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>12 High Road,</p>
-							<p>Riverton</p>
+							<a href="#">
+								<p class="street">12 High Road,</p>
+								<p class="suburb">Riverton</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>92 Harrogate Street,</p>
-							<p>West Lederville</p>
+							<a href="#">
+								<p class="street">92 Harrogate Street,</p>
+								<p class="suburb">West Lederville</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>198 Lake Street,</p>
-							<p>Northbridge</p>
+							<a href="#">
+								<p class="street">198 Lake Street,</p>
+								<p class="suburb">Northbridge</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>1306 Albany Highway,</p>
-							<p>Cannington</p>
+							<a href="#">
+								<p class="street">1306 Albany Highway,</p>
+								<p class="suburb">Cannington</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>7 Watersby Crescent</p>
-							<p>Shelley</p>
+							<a href="#">
+								<p class="street">7 Watersby Crescent</p>
+								<p class="suburb">Shelley</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>16 Howard Parade,</p>
-							<p>Salters Point</p>
+							<a href="#">
+								<p class="street">16 Howard Parade,</p>
+								<p class="suburb">Salters Point</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>17 Macrae Road,</p>
-							<p>Applecross</p>
+							<a href="#">
+								<p class="street">17 Macrae Road,</p>
+								<p class="suburb">Applecross</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 						<li>
-							<p>41 Drury Street,</p>
-							<p>Willagee</p>
+							<a href="#">
+								<p class="street">41 Drury Street,</p>
+								<p class="suburb">Willagee</p>
+							</a>
 							<div class="report_list_controls">
-								<img src="style/images/download.png"></img>
-								<img src="style/images/edit.png"></img>
-								<img src="style/images/delete.png"></img>
+								<a href="#"><img src="style/images/download.png"></img></a>
+								<a href="#"><img src="style/images/edit.png"></img></a>
+								<a href="#"><img src="style/images/delete.png"></img></a>
 							</div>
 						</li>
 					</ul>
@@ -134,11 +164,11 @@
 					<hr></hr>
 					<img src="report-cover.jpg"></img>
 					<hr></hr>
-					<p>Created On: 31<sup>st</sup> May 2011 at 3:19pm</p>
-					<p>Last Edited: 2<sup>nd</sup> June 2011 at 11:57am</p>
+					<p class="report_metainfo">Created On: 31<sup>st</sup> May 2011 at 3:19pm</p>
+					<p class="report_metainfo">Last Edited: 2<sup>nd</sup> June 2011 at 11:57am</p>
 					<hr></hr>
 					<h3>Contents</h3>
-					<ul>
+					<ul id="report_contents">
 						<li>Introduction</li>
 						<li>Property Information &amp; Instructions</li>
 						<li>Rising / Penetrating Dampness Inspection</li>
@@ -153,7 +183,7 @@
 				</div>
 			</div>
 			<div id="footer">
-				<p>Designed &amp; Developed by <a href="http://jacobhaslehurst.com">Jacob Haslehurst</a> &amp; <a href="http://charliesomerville.com">Charlie Somerville</a>. &copy; 2011
+				<p>Designed &amp; Developed by <a href="http://jacobhaslehurst.com">Jacob Haslehurst</a> &amp; <a href="http://charliesomerville.com">Charlie Somerville</a>. &copy; 2011</p>
 		</div>
 	</body>
 </html>
