adding blank report_edit pages

--- a/frontend/html/main_menu.html
+++ b/frontend/html/main_menu.html
@@ -162,7 +162,7 @@
 				<div id="main_content_rhs">
 					<h2>39 Iveston Road<br></br>Lynwood</h2>
 					<hr></hr>
-					<img src="report-cover.jpg"></img>
+					<img src="misc/report-cover.jpg"></img>
 					<hr></hr>
 					<p class="report_metainfo">Created On: 31<sup>st</sup> May 2011 at 3:19pm</p>
 					<p class="report_metainfo">Last Edited: 2<sup>nd</sup> June 2011 at 11:57am</p>
