bringing up to date (again)

--- a/frontend/html/report_edit_1_basics.html
+++ b/frontend/html/report_edit_1_basics.html
@@ -75,7 +75,7 @@
 						<select id="report_contents_selected" size="10"></select>
 						<div id="report_edit_back_forward">
 							<a href="#">&#060; PREV</a>
-							<a href="#">NEXT &#062;</a>
+							<a href="report_edit_2_intro.html">NEXT &#062;</a>
 				</div>
 			</div>
 			<div id="footer">
