--- a/frontend/html/report_edit_2_intro.html
+++ b/frontend/html/report_edit_2_intro.html
@@ -51,8 +51,8 @@
 					<hr />
 					<!--actual content goes here-->
 					<div id="report_edit_back_forward">
-						<a href="#">&#060; PREV</a>
-						<a href="#">NEXT &#062;</a>
+						<a href="report_edit_1_basics.html">&#060; PREV</a>
+						<a href="report_edit_3_prop_info.html">NEXT &#062;</a>
 					</div>
 				</siv>
 			</div>
