--- a/frontend/html/report_edit_7_summ_rec.html
+++ b/frontend/html/report_edit_7_summ_rec.html
@@ -51,8 +51,8 @@
 					<hr />
 					<!--actual content goes here-->
 					<div id="report_edit_back_forward">
-						<a href="#">&#060; PREV</a>
-						<a href="#">NEXT &#062;</a>
+						<a href="report_edit_6_timber_surv.html">&#060; PREV</a>
+						<a href="report_edit_8_quote.html">NEXT &#062;</a>
 					</div>
 				</div>
 			</div>
