--- a/frontend/html/report_edit_9_client_health_safety.html
+++ b/frontend/html/report_edit_9_client_health_safety.html
@@ -51,8 +51,8 @@
 					<hr />
 					<!--actual content goes here-->
 					<div id="report_edit_back_forward">
-						<a href="#">&#060; PREV</a>
-						<a href="#">NEXT &#062;</a>
+						<a href="report_edit_8_quote.html">&#060; PREV</a>
+						<a href="report_edit_10_terms_cond.html">NEXT &#062;</a>
 					</div>
 				</div>
 			</div>
