edit pages 1 through 3 have their placeholder boxes in place

--- a/frontend/html/report_edit_1_basics.html
+++ b/frontend/html/report_edit_1_basics.html
@@ -49,13 +49,14 @@
 					<h2>Report Edit</h2>
 					<h3>Basics</h3>
 					<hr />
-						<label>Report Name</label>
-							<input name="report_name" type="text" />
-						<label>Report Client</label>
-							<input name="report_client" type="text" />
-						<label>Report Date</label>
-							<input name="report_date" type="date" /> 
-						<div id="clearfix"></div>
+						<div class="form_fields">
+							<label>Address</label>
+								<input name="address" type="text" />
+							<label>Client Name</label>
+								<input name="client_name" type="text" />
+							<label>Date</label>
+								<input name="date" type="date" />
+						</div>
 						<select id="report_contents_all" size="10">
 							<option>Introduction</option>
 							<option>Property Information &amp; Instructions</option>
