--- a/frontend/html/report_edit_2_intro.html
+++ b/frontend/html/report_edit_2_intro.html
@@ -49,7 +49,25 @@
 					<h2>Report Edit</h2>
 					<h3>Introduction</h3>
 					<hr />
-					<!--actual content goes here-->
+					<div class="form_fields">
+						<label>Opening Paragraph</label>
+							<textarea name="introduction_opening_paragraph">
+Thank you for choosing Ambient Property Solutions Ltd to carry out your survey, please take the time to read the information supplied below as it will help in gaining a better understanding of the report&#146;s contents.Thank you for choosing Ambient Property Solutions Ltd to carry out your survey, please take the time to read the information supplied below as it will help in gaining a better understanding of the report&#146;s contents.</textarea>
+						<label>About The Survey</label>
+							<textarea name="introduction_about_the_survey">
+All our surveys are carried out by a C.S.R.T. qualified surveyor in accordance with BS6576, our surveyors do not earn commission, and work within a strict code of conduct. Each survey is carried out in the same methodical manner that all our employees adopt when inspecting properties to ensure continuity of service, whether it be a one bedroom apartment or a 6 bedroom detached house, the standard remains the same.</textarea>
+						<label>Methodology</label>
+							<textarea name="introduction_methodology">
+Unless otherwise stated, a non-destructive survey will be carried out to limit damage to plaster, brickwork and decorations, a moisture profile will be compiled using surface and sub surface moisture measurements as well as internal relative humidity readings at the time of survey to reach our final conclusion. Should there be any underlying doubt about the cause of any dampness we will recommend further testing which may include salt analysis and possibly exposing the area in question.</textarea>
+						<label>The Report</label>
+							<textarea name="introduction_the_report">
+Our reports are intended for homeowners or anyone with limited knowledge of building preservation, therefore industry terminology is avoided where possible and a more user friendly format has been adopted, should you wish a more comprehensive explanation of our findings, your surveyor will be happy to assist.</textarea>
+						<label>Findings / Recomendations</label>
+							<textarea name="introduction_findings_recomendations">
+All properties, especially older ones, will contain a certain amount of moisture within the building, and on most cases this is perfectly acceptable. Should we highlight any areas of concern, then there is generally no immediate cause for alarm, as in many cases the problem could have been present for several years without the occupiers being aware of it before it was identified.
+
+If however, there are any proposed works to the area in question, such as re-decoration or any alterations, then it would obviously be prudent to address the issue at the same time to minimise disruption and avoid further deterioration.</textarea>
+					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_1_basics.html">&#060; PREV</a>
 						<a href="report_edit_3_prop_info.html">NEXT &#062;</a>
