--- a/frontend/html/report_edit_3_prop_info.html
+++ b/frontend/html/report_edit_3_prop_info.html
@@ -49,7 +49,49 @@
 					<h2>Report Edit</h2>
 					<h3>Property Information &amp; Instructions</h3>
 					<hr />
-					<!--actual content goes here-->
+					<div class="form_fields">
+						<h4>Instructing Client(s)</h4>
+						<label>Photo</label>
+							<input name="prop_info_photo" type="file" />
+						<label>Name</label>
+							<input name="prop_info_name" type="text" value="Connel Financial Services"/>
+						<label>Address</label>
+							<input name="prop_info_address_line1" type="text" placeholder="Street Address Line 1" />
+							<input name="prop_info_address_line2" type="text" placeholder="Street Address Line 2" />
+							<input name="prop_info_address_city" type="text" placeholder="City" />
+							<input name="prop_info_address_postcode" type="text" placeholder="Postcode" />
+						<label>Date</label>
+							<input name="prop_info_date" type="date" value="17/04/2010"/>
+						<label>Reference</label>
+							<input name="prop_info_reference" type="text" value="Amb/review" />
+						<hr />
+						<label>Date of Survey</label>
+							<input name="prop_info_date_of_survey" type="date" value="17/04/2010" />
+						<label>Weather Condition</label>
+							<input name="prop_info_weather_condition" type="text" value="Overcast" />
+						<label>Thickness of Walls</label>
+							<input name="prop_info_thickness_of_walls" type="text" value="225mm" />
+						<label>Type of Survey</label>
+							<input name="prop_info_type_of_survey" type="text" value="Standard non destructive" />
+						<label>Surveyor</label>
+							<input name="prop_info_surveyor" type="text" value="Bryan Campbell C.S.R.T." />
+						<hr />
+						<label>Property Description</label>
+							<textarea name="prop_info_property_description">
+The property is a 3 bed semi detached house consisting of solid wall brick construction built around the 1920's.</textarea>
+						<label>Clients Instructions</label>
+							<textarea name="prop_info_clients_instructions">
+In accordance with your E mailed instructions to inspect the above property for possible signs of dampness to all internal walls, paying particular attention to the front reception room.</textarea>
+						<label>Point of Reference</label>
+							<textarea name="prop_info_point_of_reference">
+All our observations are taken as you are standing outside the property facing the front elevation (from the main road).</textarea>
+						<label>Nomenclature</label>
+							<textarea name="prop_info_nomenclature">
+The company has no affiliation, financial or otherwise connected to the client or property.</textarea>
+						<label>Limitations/Restrictions</label>
+							<textarea name="prop_info_limitations_restrictions">
+The survey was limited to the areas indicated by the clients instructions.</textarea>
+					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_2_intro.html">&#060; PREV</a>
 						<a href="report_edit_4_damp_inspec.html">NEXT &#062;</a>
