--- a/frontend/html/report_edit_5_conden_rep.html
+++ b/frontend/html/report_edit_5_conden_rep.html
@@ -52,7 +52,7 @@
 					<!--actual content goes here-->
 					<div id="report_edit_back_forward">
 						<a href="report_edit_4_damp_inspec.html">&#060; PREV</a>
-						<a href="report_edit_6_timber_surv.html">NEXT &#062;</a>
+						<a href="report_edit_6_sketch.html">NEXT &#062;</a>
 					</div>
 				</div>
 			</div>
