stuff done on edit pages 4 - 8

--- a/frontend/html/report_edit_4_damp_inspec.html
+++ b/frontend/html/report_edit_4_damp_inspec.html
@@ -49,7 +49,22 @@
 					<h2>Report Edit</h2>
 					<h3>Rising / Penetrating Dampness Inspection</h3>
 					<hr />
-					<!--actual content goes here-->
+					<div class="form_fields">
+						<label>Opening Pragraph</label>
+							<textarea name="damp_inspec_opening_paragraph">
+A visual inspection of the exterior of the property was undertaken to identify any obvious defects which could be a contributory factor to any areas requiring specific attention as detailed in the client’s instructions, such as faulty rainwater goods, broken/missing roof tiles, cracked brickwork or rendering or high exterior ground levels.</textarea>
+						<label>External Observations</label>
+							<textarea name="damp_inspec_external_observations">
+The exterior of the building appeared to be in reasonable condition, however it was noted that there appeared to be insufficient sub floor ventilation to the areas indicated in the enclosed sketch plan, lack of ventilation in these areas are a significant cause of decay to the floor joists and due to this area remaining concealed this decay can go unnoticed and potentially lead to the onset of dry rot, therefore we would suggest increasing the ventilation in these areas.</textarea>
+						<label>Moisture Infobox</label>
+							<textarea name="damp_inspec_moisture_infobox">
+Moisture profiles are the most effective non destructive method of establishing the cause of dampness in buildings, electrical resistance of the materials are measured using a conductivity meter, along with sub surface measurements, the results are recorded on a chart and the patterns analysed, and along with any other significant findings a diagnosis is reached, when the results are inconclusive we will recommend further tests, the most common being salt analysis.</textarea>
+						<label>Internal Observations</label>
+							<textarea name="damp_inspec_internal_observations">
+Moisture readings were taken at the base of all accessible load bearing wall surfaces, from these readings a moisture profile was created and analysed. All of what we would regard as 'abnormal' readings were investigated and from the evidence available to us at the time of our inspection there was evidence to suggest that rising dampness has been present in the walls indicated in the enclosed sketch plan.
+
+Generally it is not so much rising dampness being the problem but rather the effects of rising dampness, for example if a wall has just become wet, then it is possible to simply allow the wall to dry naturally, however if the water contains ground salts (as rising dampness does), then these are deposited within the plasterwork which will draw moisture from within the environment, and it is on this principle that we have reached our conclusion and based our recommendations on.</textarea>
+					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_3_prop_info.html">&#060; PREV</a>
 						<a href="report_edit_5_conden_rep.html">NEXT &#062;</a>
