--- a/frontend/html/report_edit_6_sketch.html
+++ b/frontend/html/report_edit_6_sketch.html
@@ -49,7 +49,19 @@
 					<h2>Report Edit</h2>
 					<h3>Sketch Plan</h3>
 					<hr />
-					<!--actual content goes here-->
+					<div class="form_fields">
+						<label>Sketch Image</label>
+							<input name="sketch_photo" type="file" />
+						<label>Name</label>
+							<input name="sketch_name" type="text" value="Connel Financial Services"/>
+						<label>Address</label>
+							<input name="sketch_address_line1" type="text" placeholder="Street Address Line 1" />
+							<input name="sketch_address_line2" type="text" placeholder="Street Address Line 2" />
+							<input name="sketch_address_city" type="text" placeholder="City" />
+							<input name="sketch_address_postcode" type="text" placeholder="Postcode" />
+						<label>Date</label>
+							<input name="sketch_date" type="date" value="17/04/2010"/>
+					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_5_conden_rep.html">&#060; PREV</a>
 						<a href="report_edit_7_timber_surv.html">NEXT &#062;</a>
