--- a/frontend/html/report_edit_7_timber_surv.html
+++ b/frontend/html/report_edit_7_timber_surv.html
@@ -49,7 +49,35 @@
 					<h2>Report Edit</h2>
 					<h3>Timber Survey</h3>
 					<hr />
-					<!--actual content goes here-->
+					<div class="form_fields">
+						<label>Opening Paragraph</label>
+							<textarea name="timber_serv_opening_paragraph">
+A detailed examination was carried out to determine the presence of any wood boring insects and/or wood rotting fungi, the results of this survey are as follows:</textarea>
+						<hr />
+						<!-- this bit will be all javascript-y -->
+						<h4>Observations</h4>
+						<div class="timber_surv_observation">
+							<label>Area Type</label>
+								<input type="text" name="<!--you'll need to do this bit-->" />
+							<label>Description</label>
+								<textarea name="<!--you'll need to do this bit-->" placeholder="insert description here..."></textarea>
+						</div>
+						<hr />
+						<div class="timber_surv_observation">
+							<label>Area Type</label>
+								<input type="text" name="<!--you'll need to do this bit-->" />
+							<label>Description</label>
+								<textarea name="<!--you'll need to do this bit-->" placeholder="insert description here..."></textarea>
+						</div>
+						<hr />
+						<div class="timber_surv_observation">
+							<label>Area Type</label>
+								<input type="text" name="<!--you'll need to do this bit-->" />
+							<label>Description</label>
+								<textarea name="<!--you'll need to do this bit-->" placeholder="insert description here..."></textarea>
+						</div>
+						<p class="list_add_new"><a href="#">add new (+)</a></p>
+					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_6_sketch.html">&#060; PREV</a>
 						<a href="report_edit_8_summ_rec.html">NEXT &#062;</a>
