--- a/frontend/html/report_edit_8_summ_rec.html
+++ b/frontend/html/report_edit_8_summ_rec.html
@@ -49,7 +49,12 @@
 					<h2>Report Edit</h2>
 					<h3>Summary &amp; Recommendations</h3>
 					<hr />
-					<!--actual content goes here-->
+					<div class="form_fields">
+						<label>Summary</label>
+							<textarea name="summ_rec_summary">
+Overall the property appears to be in reasonable condition and there is no evidence to suggest that there is any areas which would be of major concern, we would suggest installing additional air vents to the areas indicated in the enclosed sketch plan to increase the ventilation to the sub floor timbers and have submitted a quotation for your information, however as access was limited in several areas we strongly suggest a further visit when full access is available.</textarea>
+						
+					</div>
 					<div id="report_edit_back_forward">
 						<a href="report_edit_7_timber_surv.html">&#060; PREV</a>
 						<a href="report_edit_9_quote.html">NEXT &#062;</a>
